--- a/grboilerplate.css
+++ b/grboilerplate.css
@@ -1,7 +1,7 @@
 body {
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
     font-size: 1.4rem;
-    background: url(https://i.ibb.co/fnwgsbR/misr.jpg) top no-repeat;
+    background: url(https://i.ibb.co/pwzQpy3/IMG-3477.jpg) top no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
