--- a/grboilerplate.css
+++ b/grboilerplate.css
@@ -2,7 +2,7 @@ body {
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
     font-size: 1.4rem;
     /*background: url(https://i.ibb.co/pwzQpy3/IMG-3477.jpg) top no-repeat;*/
-    background: urlhttps://i.ibb.co/C1NhK0J/sahatsakhantemple.jpg) top no-repeat;
+    background: url(https://i.ibb.co/C1NhK0J/sahatsakhantemple.jpg) top no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
