--- a/grboilerplate.css
+++ b/grboilerplate.css
@@ -12,9 +12,9 @@ body {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #212529;
+    color: #fff;
     text-align: left;
-    background-color: #fff;
+    background-color: #212529;
 }
 *, :after, :before {
     box-sizing: border-box;
