--- a/grboilerplate.css
+++ b/grboilerplate.css
@@ -2,9 +2,10 @@ body {
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
     font-size: 2.5rem;
     /*background: url(https://i.ibb.co/pwzQpy3/IMG-3477.jpg) top no-repeat;*/
-    background: url(https://i.ibb.co/C1NhK0J/sahatsakhantemple.jpg) top no-repeat;
+    background: url(https://i.ibb.co/C1NhK0J/sahatsakhantemple.jpg) center no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    height: 100%;
 }
 body {
     margin: 0;
@@ -16,10 +17,19 @@ body {
     text-align: left;
     background-color: #212529;
 }
-
 body {
     display: block;
     margin: 8px;
+}
+html {
+    height: 100%;
+    font-family: sans-serif;
+    line-height: 1.15;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+*, :after, :before {
+    box-sizing: border-box;
 }
 :root {
     --blue: #007bff;
@@ -50,15 +60,4 @@ body {
     --breakpoint-xl: 1200px;
     --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-}
-html {
-    resize: both;
-    overflow: auto;
-    font-family: sans-serif;
-    line-height: 1.15;
-    -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-}
-*, :after, :before {
-    box-sizing: border-box;
 }
