--- a/grboilerplate.css
+++ b/grboilerplate.css
@@ -7,6 +7,10 @@ body {
     background-size: cover;
     height: 100%;
 }
+a:hover {
+    background-color: yellow;
+    color: red;
+  }
 body {
     margin: 0;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
