--- a/grboilerplate.css
+++ b/grboilerplate.css
@@ -9,9 +9,9 @@ body {
 }
 p:hover {
     color: #6f42c1;
-    font-size: 150%;
-    opacity: 0.5;
-  }
+    font-weight: 100;
+    background-blend-mode: var(--purple);
+}
 body {
     margin: 0;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
