--- a/grboilerplate.css
+++ b/grboilerplate.css
@@ -1,34 +1,26 @@
 body {
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
     font-size: 2.5rem;
+    font-weight: 400;
     /*background: url(https://i.ibb.co/pwzQpy3/IMG-3477.jpg) top no-repeat;*/
     background: url(https://i.ibb.co/C1NhK0J/sahatsakhantemple.jpg) center no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    background-color: #212529;
     height: 100%;
+    margin: 0;
+    line-height: 1.5;
+    color: #fff;
+    text-align: left;
 }
 p:hover {
     color: #6f42c1;
     font-weight: 650;
     background-blend-mode: var(--purple);
 }
-body {
-    margin: 0;
-    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
-    font-size: 1.2rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #fff;
-    text-align: left;
-    background-color: #212529;
-}
-body {
-    display: block;
-    margin: 8px;
-}
 html {
     height: 100%;
-    font-family: sans-serif;
+    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
