--- a/grboilerplate.css
+++ b/grboilerplate.css
@@ -8,7 +8,7 @@ body {
     /*-background-size: cover;*/
     background-color: black;
     text-align: center;
-    color: dark var(--gray-dark);
+    color: white;
     height: 100%;
     margin: 0;
     line-height: 1.5;
