--- a/grboilerplate.css
+++ b/grboilerplate.css
@@ -7,7 +7,7 @@ body {
     background-attachment: fixed;
     /*-background-size: cover;*/
     background-color: black;
-    text-align: left top;
+    text-align: top;
     color: white;
     height: 100%;
     margin: 0;
@@ -49,10 +49,10 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     display: block;
 }
 .skew-menu ul li:first-child {
-    border-radius: 7px 0 0 7px;
+    border-radius: 5px 0 0 5px;
 }
 .skew-menu ul li {
-    background: hsla(0,0%,100%,.9);
+    background: hsla(0,0%,100%,.5);
     float: left;
     border-right: 1px solid #f5f5f5;
     box-shadow: 0 1px 1px rgba(0,0,0,.1);
@@ -95,7 +95,7 @@ ul {
     padding-top: .3125rem;
     padding-bottom: .3125rem;
     margin-right: 1rem;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     line-height: inherit;
     white-space: nowrap;
 }
