--- a/grboilerplate.css
+++ b/grboilerplate.css
@@ -47,7 +47,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 .skew-menu ul li {
     background: hsla(0,0%,100%,.5);
     float: left;
-    border-right: 1px solid #f5f5f5;
+    /*border-right: 1px solid #f5f5f5;*/
     box-shadow: 0 1px 1px rgba(0,0,0,.1);
     color: #555;
     font-weight: bolder;
