--- a/grboilerplate.css
+++ b/grboilerplate.css
@@ -3,7 +3,8 @@ body {
     font-size: 1.5rem;
     font-weight: 350;
     /*background: url(https://i.ibb.co/pwzQpy3/IMG-3477.jpg) top no-repeat;*/
-    background: url(https://i.ibb.co/C1NhK0J/sahatsakhantemple.jpg) center no-repeat;
+    /*background: url(https://i.ibb.co/C1NhK0J/sahatsakhantemple.jpg) center no-repeat;*/
+    background: url(https://i.ibb.co/3mt4FkY/875995-E2-1-F8-B-41-FD-9830-4-B51-A25555-C3.jpg) center no-repeat;
     background-attachment: fixed;
     /*-background-size: cover;*/
     background-color: black;
