--- a/grboilerplate.css
+++ b/grboilerplate.css
@@ -6,10 +6,10 @@ body {
     /*background: url(https://i.ibb.co/C1NhK0J/sahatsakhantemple.jpg) center no-repeat;*/
     background: url(https://i.ibb.co/3mt4FkY/875995-E2-1-F8-B-41-FD-9830-4-B51-A25555-C3.jpg) center no-repeat;
     background-attachment: fixed;
-    /*-background-size: cover;*/
+    background-size: cover;
     background-color: black;
     text-align: top;
-    color: rgba(255,255,255,0.4);
+    color: rgba(128, 46, 46, 0.65);
     height: 100%;
     margin: 0;
     line-height: 1.5;
@@ -46,7 +46,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     border-radius: 5px 5px 5px 5px;
 }
 .skew-menu ul li {
-    background: hsla(0,0%,100%,.5);
+    background: hsla(0,0%,100%,.65);
     float: left;
     /*border-right: 1px solid #f5f5f5;*/
     box-shadow: 0 1px 1px rgba(0,0,0,.1);
