--- a/grboilerplate.css
+++ b/grboilerplate.css
@@ -10,6 +10,7 @@ body {
     background-color: black;
     text-align: top;
     color: rgba(128, 46, 46, 0.65);
+    width: 100%;
     height: 100%;
     margin: 0;
     line-height: 1.5;
@@ -46,7 +47,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     border-radius: 5px 5px 5px 5px;
 }
 .skew-menu ul li {
-    background: hsla(0,0%,100%,.65);
+    background: hsla(0,0%,100%,.4);
     float: left;
     /*border-right: 1px solid #f5f5f5;*/
     box-shadow: 0 1px 1px rgba(0,0,0,.1);
