--- a/grboilerplate.css
+++ b/grboilerplate.css
@@ -51,7 +51,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     float: left;
     /*border-right: 1px solid #f5f5f5;*/
     box-shadow: 0 1px 1px rgba(0,0,0,.1);
-    color: #555;
+    color: rgba(128, 46, 46, 0.65);
     font-weight: bolder;
     transition: all .3s linear;
 }
@@ -67,7 +67,7 @@ li {
 .skew-menu ul li a {
     display: block;
     padding: 1em 2em;
-    color: rgba(255,255,255,0.4);
+    color: rgba(128, 46, 46, 0.65);
     text-decoration: none;
     /*transform: skew(25deg);*/
 }
